--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "axios": "^0.21.1"
   },
   "scripts": {
-    "test-scraper": "node test/scraperTest.js"
+    "test-scraper": "node test/scraperTest.js",
+    "start": "node index.js"
   }
 
 }
