Handling erros of project not found and other

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "axios": "^0.21.1"
   },
   "scripts": {
-    "test-scraper": "node test/scraperTest.js",
+    "test": "node test/scraperTest.js",
     "start": "node index.js"
   }
 
